index.html modified, style.css - flexbox

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     font-family: Arial;
+    background-color: aliceblue;
+    padding: 40px 0px;
+
 }
 
 h2{
@@ -17,4 +20,18 @@ span{
 img{
     width: 150px; 
     height: 150px;
+}
+
+section,
+header{
+    padding: 10px 60px 20px 60px;
+    background-color: white;
+    width: 960px;
+    margin: 0 auto;
+}
+
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
