--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ span{
 }
 
 img{
-    width: 150px; 
-    height: 150px;
+    width: 180px; 
+    height: 180px;
 }
 
 section,
@@ -34,4 +34,22 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+header ul{
+    list-style: none;
+}
+
+header li{
+    margin-bottom: 15px;
+}
+
+header address img{
+    width: 16px;
+    height: 16px;
+    background-color: cornflowerblue; 
+    margin-right: 10px;
+    padding: 8px;
+    vertical-align: middle;
+    border-radius: 50%;
 }
