--- a/style.css
+++ b/style.css
@@ -85,3 +85,28 @@ header li{
 p{
     line-height: 1.5;
 }
+
+.cv-download-link{
+    border: 2px solid cornflowerblue;
+    color: black;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: inline-block;
+    margin-top: 20px;
+    border-radius: 26px;
+    transition: background-color 0.5s, color 0.5s;
+}
+
+.cv-download-link:hover{
+    color: white;
+    background-color: cornflowerblue;
+}
+
+.cv-download-link:focus{
+    color: white;
+    background-color: cornflowerblue;
+}
+
+.cv-download-link:active{
+    text-decoration: underline;
+}
