--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 
 h1{
     font-size: 36px;
+    margin-bottom: 10px;
 }
 
 h2{
@@ -21,25 +22,30 @@ span{
     color: grey;
 }
 
+.container{
+    box-shadow: 0 0 8px grey;
+    width: 960px;
+    margin: 0 auto;
+    background-color: white;
+}
+
 section,
 header{
     padding: 10px 60px 20px 60px;
-    background-color: white;
-    width: 960px;
-    margin: 0 auto;
 }
 
 header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 60px;
 }
 
 header ul{
     list-style: none;
 }
 
-header li{
+li{
     margin-bottom: 15px;
 }
 
@@ -95,6 +101,7 @@ p{
     margin-top: 20px;
     border-radius: 26px;
     transition: background-color 0.5s, color 0.5s;
+    box-shadow: 0 0 8px grey;
 }
 
 .cv-download-link:hover{
